--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <div class="row">
       <div class="col-md-12">
         <div id="bar"></div>
-        <p><h3>This graph shows the top 10 bacteria found in your belly button, 
-          their id and number found.<br></h3></p>
+        <p><h3>This graph shows the top 10 bacteria (OTU) found in your belly button.
+     The microbial species are also called operational taxonomic units, or OTUs, in the study.<br></h3></p>
       </div>
 
     </div><br><br>
