--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
             <a href="#bubble">Sample Info</a>
           </div><br>
         </div>
+        <div class="row">
          <div class="col-md-3">
         <div class="well">
-          <p><h4><center>Select your ID No to see your results</center></h4>
-            <p><h2><center><select id="selDataset" onchange="optionChanged(this.value)"></select></center></h2></p>
+          <h4><center>Select your ID No to see your results</center></h4>
+          <h2><center> <select id="selDataset" onchange="optionChanged(this.value)"></select></center></h2>
+            <!-- <p><h2><center><select id="selDataset" onchange="optionChanged(this.value)"></select></center></h2></p> -->
         </div>
         <div class="col-md-8"></div>
         <div class="panel panel-primary">
